warning suppression added

--- a/topic-modeling/topic_modeling.ipynb
+++ b/topic-modeling/topic_modeling.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Topic Modeling with LDA and NMF algorithms"
+    "# Topic Modeling with LDA, LSA, and NMF algorithms"
    ]
   },
   {
@@ -46,6 +46,9 @@
     }
    ],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "import pandas as pd;\n",
     "import numpy as np;\n",
     "import scipy as sp;\n",
