--- a/ds-methodology/readme.nd
+++ b/ds-methodology/readme.nd
@@ -1,25 +1,25 @@
-Now that you have been equipped with the skills and the tools to use location data to explore a geographical location, over the course of two weeks, you will have the opportunity to be as creative as you want and come up with an idea to leverage the Foursquare location data to explore or compare neighborhoods or cities of your choice or to come up with a problem that you can use the Foursquare location data to solve. If you cannot think of an idea or a problem, here are some ideas to get you started:
+In this Assignment, you will demonstrate your understanding of the data science methodology by applying it to a given problem. Pick one of the following topics to apply the data science methodology to:
 
-In Module 3, we explored New York City and the city of Toronto and segmented and clustered their neighborhoods. Both cities are very diverse and are the financial capitals of their respective countries. One interesting idea would be to compare the neighborhoods of the two cities and determine how similar or dissimilar they are. Is New York City more like Toronto or Paris or some other multicultural city? I will leave it to you to refine this idea.
-In a city of your choice, if someone is looking to open a restaurant, where would you recommend that they open it? Similarly, if a contractor is trying to start their own business, where would you recommend that they setup their office?
-These are just a couple of many ideas and problems that can be solved using location data in addition to other datasets. No matter what you decide to do, make sure to provide sufficient justification of why you think what you want to do or solve is important and why would a client or a group of people be interested in your project.
+Emails
+Hospitals
+Credit Cards
+You will have to play the role of the client as well as the data scientist to come up with a problem that is more specific but related to these topics.
 
-Review criterialess 
-This capstone project will be graded by your peers. This capstone project is worth 70% of your total grade. The project will be completed over the course of 2 weeks. Week 1 submissions will be worth 30% whereas week 2 submissions will be worth 40% of your total grade.
+Next, you will play the role of the client and the data scientist.
 
-For this week, you will required to submit the following:
+Using the topic that you selected, complete the Business Understanding stage by coming up with a problem that you would like to solve and phrasing it in the form of a question that you will use data to answer. (3 marks)
 
-A description of the problem and a discussion of the background. (15 marks)
-A description of the data and how it will be used to solve the problem. (15 marks)
+You are required to:
 
-For the second week, the final deliverables of the project will be:
+Describe the problem, related to the topic you selected.
+Phrase the problem as a question to be answered using data.
+For example, using the food recipes use case discussed in the labs, the question that we defined was, "Can we automatically determine the cuisine of a given dish based on its ingredients?".
 
-A link to your Notebook on your Github repository, showing your code. (15 marks)
-A full report consisting of all of the following components (15 marks):
-Introduction where you discuss the business problem and who would be interested in this project.
-Data where you describe the data that will be used to solve the problem and the source of the data.
-Methodology section which represents the main component of the report where you discuss and describe any exploratory data analysis that you did, any inferential statistical testing that you performed, and what machine learnings were used and why.
-Results section where you discuss the results.
-Discussion section where you discuss any observations you noted and any recommendations you can make based on the results.
-Conclusion section where you conclude the report.
-3. Your choice of a presentation or blogpost. (10 marks)
+Briefly explain how you would complete each of the following stages for the problem that you described in the Business Understanding stage, so that you are ultimately able to answer the question that you came up with. (5 marks):
+
+Analytic Approach
+Data Requirements
+Data Collection
+Data Understanding and Preparation
+Modeling and Evaluation
+You can always refer to the labs as a reference with describing how you would complete each stage for your problem.
