Advanced Datascience Capstone notebookds changed to run locally

--- a/adv-ds-capstone/wine-price-prediction.model_deploy.ipynb
+++ b/adv-ds-capstone/wine-price-prediction.model_deploy.ipynb
@@ -1,1 +1,292 @@
-{"nbformat_minor": 1, "cells": [{"source": "# Wine Price Prediction - Model Deployment\n\n\n## Data and Use case\n\n[**Wine Reviews** - 130k wine reviews with variety, location, winery, price, and description](https://www.kaggle.com/zynicide/wine-reviews/home)\n\nThis dataset is available on Kaggle and contains around 130k of wine reviews. The data was scraped from [WineEnthusiast](http://www.winemag.com/?s=&drink_type=wine) on November 22nd, 2017.\n\nI plan to use this dataset to develop a model that predicts wine price for specified set of parameters, like wine variety, region, desired quality. Such model, may be integrated into an application that runs on a mobile device to suggest price range during wine shopping without need to do online search.\n\n## Deploy our Keras model in WML", "cell_type": "markdown", "metadata": {}}, {"source": "First, install the Python API client from pypi.", "cell_type": "markdown", "metadata": {}}, {"execution_count": 1, "cell_type": "code", "metadata": {}, "outputs": [], "source": "# !rm -rf $PIP_BUILD/watson-machine-learning-client"}, {"execution_count": 2, "cell_type": "code", "metadata": {}, "outputs": [], "source": "#Install the WML client if required.\n# !pip install watson-machine-learning-client --upgrade\n# !pip install wget"}, {"source": "Authenticate to the WML service on IBM Cloud.", "cell_type": "markdown", "metadata": {}}, {"execution_count": 3, "cell_type": "code", "metadata": {}, "outputs": [], "source": "# The code was removed by Watson Studio for sharing."}, {"execution_count": 6, "cell_type": "code", "metadata": {}, "outputs": [], "source": "wml_credentials={\n  \"url\": service_url,\n  \"username\": user,\n  \"password\": password,\n  \"instance_id\": instance_id\n}"}, {"source": "Instantiate WML client.", "cell_type": "markdown", "metadata": {}}, {"execution_count": 7, "cell_type": "code", "metadata": {}, "outputs": [], "source": "from watson_machine_learning_client import WatsonMachineLearningAPIClient"}, {"execution_count": 8, "cell_type": "code", "metadata": {}, "outputs": [], "source": "wml_client = WatsonMachineLearningAPIClient(wml_credentials)"}, {"source": "Details about the WML service instance are available in service_instance.details.", "cell_type": "markdown", "metadata": {}}, {"execution_count": 9, "cell_type": "code", "metadata": {}, "outputs": [{"output_type": "stream", "name": "stdout", "text": "{'metadata': {'created_at': '2018-11-27T10:31:45.197Z', 'url': 'https://us-south.ml.cloud.ibm.com/v3/wml_instances/c9424f5f-0323-4aa3-87e1-eae64d00164b', 'modified_at': '2018-11-27T10:31:45.197Z', 'guid': 'c9424f5f-0323-4aa3-87e1-eae64d00164b'}, 'entity': {'region': 'us-south', 'account': {'id': '73bc3224d4573659240aaeec4bfcf74c', 'type': 'PAYG', 'name': \"Oleg Kholod's Account\"}, 'tags': None, 'deployments': {'url': 'https://us-south.ml.cloud.ibm.com/v3/wml_instances/c9424f5f-0323-4aa3-87e1-eae64d00164b/deployments'}, 'source': 'Bluemix', 'status': 'Active', 'plan_id': '3f6acf43-ede8-413a-ac69-f8af3bb0cbfe', 'published_models': {'url': 'https://us-south.ml.cloud.ibm.com/v3/wml_instances/c9424f5f-0323-4aa3-87e1-eae64d00164b/published_models'}, 'organization_guid': 'N/A', 'plan': 'lite', 'space_guid': 'N/A', 'usage': {'capacity_units': {'current': 0, 'limit': 180000000}, 'gpu_count_v100': {'current': 0, 'limit': 0}, 'expiration_date': '2019-04-01T00:00:00.000Z', 'model_count': {'current': 1, 'limit': 200}, 'deployment_count': {'current': -1, 'limit': 5}, 'prediction_count': {'current': 0, 'limit': 5000}, 'gpu_count_p100': {'current': 0, 'limit': 0}, 'computation_time': {'current': 0, 'limit': 180000}, 'gpu_count_k80': {'current': 0, 'limit': 8}}, 'owner': {'country_code': 'BLR', 'ibm_id': '50X87801UA', 'beta_user': False, 'user_id': 'f768d287-70f4-4d0d-9d59-6e89e8efb8be', 'email': 'oleg.kholod@gmail.com'}}}\n"}], "source": "# List information about your WML service instance.\nprint(wml_client.service_instance.details)"}, {"execution_count": 10, "cell_type": "code", "metadata": {}, "outputs": [{"output_type": "stream", "name": "stdout", "text": "------------------------------------  ---------------------  ------------------------  --------------\nGUID                                  NAME                   CREATED                   FRAMEWORK\n5a9d0fa6-2541-4b43-8785-43fd7959c8ba  Wine Price Prediction  2018-12-01T10:53:13.122Z  tensorflow-1.5\n------------------------------------  ---------------------  ------------------------  --------------\n"}], "source": "# List information about the stored models.\nwml_client.repository.list_models()"}, {"execution_count": 11, "cell_type": "code", "metadata": {}, "outputs": [{"output_type": "stream", "name": "stdout", "text": "------------------------------------  ---------------------  ------  --------------  ------------------------  --------------  -------------\nGUID                                  NAME                   TYPE    STATE           CREATED                   FRAMEWORK       ARTIFACT TYPE\n5cac7bd6-a611-427d-8c18-240bb85287fb  Wine Price Prediction  online  DEPLOY_SUCCESS  2018-12-01T10:53:24.484Z  tensorflow-1.5  model\n------------------------------------  ---------------------  ------  --------------  ------------------------  --------------  -------------\n"}], "source": "# List the deployed models.\nwml_client.deployments.list()"}, {"source": "Let's prepare archive with our model for upload.", "cell_type": "markdown", "metadata": {}}, {"execution_count": 18, "cell_type": "code", "metadata": {}, "outputs": [{"output_type": "stream", "name": "stdout", "text": "wine-price-prediction.model.keras.final.fitted.h5\r\n"}], "source": "!tar -cvzf wine-model.tgz wine-price-prediction.model.keras.final.fitted.h5"}, {"execution_count": 19, "cell_type": "code", "metadata": {}, "outputs": [{"output_type": "stream", "name": "stdout", "text": "wine-model.tgz\r\n"}], "source": "!ls *.tgz"}, {"source": "Store the archive file in the WML service repository, then list all the files stored in the repository.", "cell_type": "markdown", "metadata": {}}, {"execution_count": 20, "cell_type": "code", "metadata": {}, "outputs": [{"output_type": "stream", "name": "stdout", "text": "------------------------------------  ---------------------  ------------------------  --------------\nGUID                                  NAME                   CREATED                   FRAMEWORK\n5a9d0fa6-2541-4b43-8785-43fd7959c8ba  Wine Price Prediction  2018-12-01T10:53:13.122Z  tensorflow-1.5\n------------------------------------  ---------------------  ------------------------  --------------\n"}], "source": "# Save the downloaded file to the WML repository.\nprops = {wml_client.repository.ModelMetaNames.NAME: 'Wine Price Prediction',\n              wml_client.repository.ModelMetaNames.AUTHOR_NAME: \"Oleg Kholod\", \n              wml_client.repository.ModelMetaNames.FRAMEWORK_NAME: \"tensorflow\", \n              wml_client.repository.ModelMetaNames.FRAMEWORK_VERSION: \"1.5\"}\n\nmodel_details = wml_client.repository.store_model('wine-model.tgz', props)\nwml_client.repository.list_models()"}, {"execution_count": 21, "cell_type": "code", "metadata": {}, "outputs": [{"output_type": "stream", "name": "stdout", "text": "\n\n#######################################################################################\n\nSynchronous deployment creation for uid: '5a9d0fa6-2541-4b43-8785-43fd7959c8ba' started\n\n#######################################################################################\n\n\nINITIALIZING\nDEPLOY_IN_PROGRESS.\nDEPLOY_SUCCESS\n\n\n------------------------------------------------------------------------------------------------\nSuccessfully finished deployment creation, deployment_uid='5cac7bd6-a611-427d-8c18-240bb85287fb'\n------------------------------------------------------------------------------------------------\n\n\n------------------------------------  ---------------------  ------  --------------  ------------------------  --------------  -------------\nGUID                                  NAME                   TYPE    STATE           CREATED                   FRAMEWORK       ARTIFACT TYPE\n5cac7bd6-a611-427d-8c18-240bb85287fb  Wine Price Prediction  online  DEPLOY_SUCCESS  2018-12-01T10:53:24.484Z  tensorflow-1.5  model\n------------------------------------  ---------------------  ------  --------------  ------------------------  --------------  -------------\n"}], "source": "# Create the online deployment.\nmodel_uid = wml_client.repository.get_model_uid(model_details)\nmodel_deployment = wml_client.deployments.create(model_uid, name = 'Wine Price Prediction')\n\nwml_client.deployments.list()"}, {"execution_count": 22, "cell_type": "code", "metadata": {}, "outputs": [{"output_type": "stream", "name": "stdout", "text": "https://us-south.ml.cloud.ibm.com/v3/wml_instances/c9424f5f-0323-4aa3-87e1-eae64d00164b/deployments/5cac7bd6-a611-427d-8c18-240bb85287fb/online\n"}], "source": "# Verify the online scoring endpoint.\nmodel_scoring_url = wml_client.deployments.get_scoring_url(model_deployment)\n\nprint(model_scoring_url)"}, {"source": "## Check the deployed model\n\nLet's check the prediction by the model deployed to WML and the same model running in Watson Studio. I use a dummy data in both cases, we just need to see the same result.", "cell_type": "markdown", "metadata": {}}, {"execution_count": 24, "cell_type": "code", "metadata": {}, "outputs": [{"output_type": "stream", "name": "stdout", "text": "{'fields': ['prediction', 'prediction_classes', 'probability'], 'values': [[[1.970050573348999], [1], [1.970050573348999]]]}\n"}], "source": "import numpy as np\n\nx = np.zeros((1146,), dtype=float)\n\n# Score data and predict price.\nscoring_data = {'fields': ['inputs'], 'values': [np.array(x).tolist()]}\npredictions = wml_client.deployments.score(model_scoring_url, scoring_data) \n\nprint(predictions)"}, {"source": "Run the model in Watson Studio.", "cell_type": "markdown", "metadata": {}}, {"execution_count": 25, "cell_type": "code", "metadata": {}, "outputs": [], "source": "from keras.models import load_model\nmodel = load_model('wine-price-prediction.model.keras.final.fitted.h5')"}, {"execution_count": 27, "cell_type": "code", "metadata": {}, "outputs": [{"execution_count": 27, "metadata": {}, "data": {"text/plain": "array([[ 1.97005057]], dtype=float32)"}, "output_type": "execute_result"}], "source": "model.predict(np.zeros((1,1146), dtype=float))"}, {"source": "We can see that both calls produced the same result.", "cell_type": "markdown", "metadata": {}}, {"execution_count": null, "cell_type": "code", "metadata": {}, "outputs": [], "source": ""}], "metadata": {"kernelspec": {"display_name": "Python 3.5 with Spark 2.1", "name": "python3-spark21", "language": "python"}, "language_info": {"mimetype": "text/x-python", "nbconvert_exporter": "python", "version": "3.5.4", "name": "python", "file_extension": ".py", "pygments_lexer": "ipython3", "codemirror_mode": {"version": 3, "name": "ipython"}}}, "nbformat": 4}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Wine Price Prediction - Model Deployment\n",
+    "\n",
+    "\n",
+    "## Data and Use case\n",
+    "\n",
+    "[**Wine Reviews** - 130k wine reviews with variety, location, winery, price, and description](https://www.kaggle.com/zynicide/wine-reviews/home)\n",
+    "\n",
+    "This dataset is available on Kaggle and contains around 130k of wine reviews. The data was scraped from [WineEnthusiast](http://www.winemag.com/?s=&drink_type=wine) on November 22nd, 2017.\n",
+    "\n",
+    "I plan to use this dataset to develop a model that predicts wine price for specified set of parameters, like wine variety, region, desired quality. Such model, may be integrated into an application that runs on a mobile device to suggest price range during wine shopping without need to do online search.\n",
+    "\n",
+    "## Deploy our Keras model in WML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, install the Python API client from pypi."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !rm -rf $PIP_BUILD/watson-machine-learning-client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Install the WML client if required.\n",
+    "# !pip install watson-machine-learning-client --upgrade\n",
+    "# !pip install wget"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Authenticate to the WML service on IBM Cloud."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The code was removed by Watson Studio for sharing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wml_credentials={\n",
+    "  \"url\": service_url,\n",
+    "  \"username\": user,\n",
+    "  \"password\": password,\n",
+    "  \"instance_id\": instance_id\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instantiate WML client."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from watson_machine_learning_client import WatsonMachineLearningAPIClient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wml_client = WatsonMachineLearningAPIClient(wml_credentials)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Details about the WML service instance are available in service_instance.details."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List information about your WML service instance.\n",
+    "print(wml_client.service_instance.details)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List information about the stored models.\n",
+    "wml_client.repository.list_models()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List the deployed models.\n",
+    "wml_client.deployments.list()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's prepare archive with our model for upload."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!tar -cvzf wine-model.tgz wine-price-prediction.model.keras.final.fitted.h5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Store the archive file in the WML service repository, then list all the files stored in the repository."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the downloaded file to the WML repository.\n",
+    "props = {wml_client.repository.ModelMetaNames.NAME: 'Wine Price Prediction',\n",
+    "              wml_client.repository.ModelMetaNames.AUTHOR_NAME: \"Oleg Kholod\", \n",
+    "              wml_client.repository.ModelMetaNames.FRAMEWORK_NAME: \"tensorflow\", \n",
+    "              wml_client.repository.ModelMetaNames.FRAMEWORK_VERSION: \"1.5\"}\n",
+    "\n",
+    "model_details = wml_client.repository.store_model('wine-model.tgz', props)\n",
+    "wml_client.repository.list_models()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the online deployment.\n",
+    "model_uid = wml_client.repository.get_model_uid(model_details)\n",
+    "model_deployment = wml_client.deployments.create(model_uid, name = 'Wine Price Prediction')\n",
+    "\n",
+    "wml_client.deployments.list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Verify the online scoring endpoint.\n",
+    "model_scoring_url = wml_client.deployments.get_scoring_url(model_deployment)\n",
+    "\n",
+    "print(model_scoring_url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Check the deployed model\n",
+    "\n",
+    "Let's check the prediction by the model deployed to WML and the same model running in Watson Studio. I use a dummy data in both cases, we just need to see the same result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.zeros((1146,), dtype=float)\n",
+    "\n",
+    "# Score data and predict price.\n",
+    "scoring_data = {'fields': ['inputs'], 'values': [np.array(x).tolist()]}\n",
+    "predictions = wml_client.deployments.score(model_scoring_url, scoring_data) \n",
+    "\n",
+    "print(predictions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the model in Watson Studio."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import load_model\n",
+    "model = load_model('wine-price-prediction.model.keras.final.fitted.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.predict(np.zeros((1,1146), dtype=float))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that both calls produced the same result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
+}
